Adjust tracked files

--- a/.gitignore
+++ b/.gitignore
@@ -16,3 +16,5 @@ img/high_low_dmg*
 rubbish*
 pdf_input/erklaerung.pdf
 pdf_input/anmeldeformular.pdf
+Abschlussarbeit_352667.pdf
+thesis_for_proofing.pdf
