Fix tracked files

--- a/.gitignore
+++ b/.gitignore
@@ -14,7 +14,6 @@ img/xcf/
 img/draw/regression*
 img/high_low_dmg*
 rubbish*
-pdf_input/erklaerung.pdf
-pdf_input/anmeldeformular.pdf
 Abschlussarbeit_352667.pdf
 thesis_for_proofing.pdf
+pdf_input/*
